clusters/homelab/apps/infra/nginx-gateway-fabric/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: homelab-wildcard-tls
          - kind: Secret
            name: kodewriter-tls
            namespace: coding-agent
      allowedRoutes:
        namespaces:
          from: All
